--- a/src/partials/modal-card.html
+++ b/src/partials/modal-card.html
@@ -3,7 +3,7 @@
         <button type="button" name="data-modal-card-open">open</button>
         <button class="modal-card_close" type="button">
             <svg class="icon-cross" height="12" width="12">
-                <use href="./images/sprite.svg#icon-cross"></use>
+                <use href="./images/sprite.svg#icon-close"></use>
             </svg>
         </button>
         <script type="module" src="./js/modal-card.js"></script>
