--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,43 +1,59 @@
 <header class="header-conteiner">
   <div class="conteiner">
     <div class="header-wrap">
-      <svg width="24" height="24">
-        <use href="/src/images/sprite.svg#icon-logo"></use>
-      </svg>
-      <a class="link logo-name" href="/src/index.html"
-        >Bookshelf</a
-      >
       <nav class="navigation">
-        <a class="link link-active nav-home-page" href="/src/index.html"
-          >HOME</a
+         <svg width="24" height="24">
+          <use href="/src/images/sprite.svg#icon-logo"></use>
+         </svg>
+        <a class="link logo-name" href="/src/index.html"
+          >Bookshelf</a
         >
-        <a class="link nav-shopping-page" href="/src/shopping-list.html">SHOPPING LIST
-        <svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a>
+        <!-- <div class="menu-conteiner-account js-menu-conteiner-account">
+          <ul class="nav-list list">
+            <li class="nav-list__item"><a class="link link-active nav-home-page" href="/src/index.html">HOME</a>
+            </li>
+            <li class="nav-list__item"><a class="link nav-shopping-page" href="#">SHOPPING LIST<svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>
+          </ul>
+        </div> -->
       </nav>
       <label class="switch">
-        <input class="js-color-switcher"type="checkbox" name="check" value="yes"/>
+        <input class="js-color-switcher" type="checkbox" name="check" value="yes" />
         <span class="slider round"></span>
       </label>
-      <button class="burger js-open-menu" type="button" aria-expanded="false">
-        <svg width="28" height="28" aria-label="Перемикач мобільного меню">
-          <use href="/src/images/sprite.svg#icon-burger"></use>
-        </svg>
-      </button>
-      <div class="login-thumb">
-
-        <!-- <svg width="37" heigth="37">
-            <use href="/src/images/sprite.svg#icon-user"></use></svg> -->
-        <button class="login-thumb__btn" type="button">Sign up</button>
-
-        <svg width="20" heigth="20">
-            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-        </svg>
+      <div class="buttons-menu">
+          <button class="burger open-menu-btn" id="js-open-menu-btn btn" type="button" aria-expanded="false"><span class="burger__row"></span><span></span></button>
+              <!-- <svg class="burger__icon" width="28" height="28" aria-label="Перемикач мобільного меню">
+                <use class="burger__link" href="/src/images/sprite.svg#icon-burger"></use>
+              </svg> -->
+            
+            <button class="close-menu-btn btn hidden" id="js-close-menu" type="button" aria-expanded="false" aria-controls="menu-conteiner">
+              <img src="/src/images/header/x-close.png">
+          <!-- <svg class="icon-close-menu__icon" width="28" height="28" aria-label="Перемикач мобільного меню">
+                <use class="icon-close-menu__link" href="/src/images/sprite.svg#icon-cross"></use>
+              </svg>   -->
+            </button> 
       </div>
+     
+      <div class="munu-conteiner-call-to-registration">
+        <button class="call-to-registration-btn "><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+          <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+          </svg></button>
+          <!-- <h1>MUNU contaoner</h1> -->
+       </div> 
     </div>
   </div>
 </div>
 </header>
+<div class="mobile-menu js-menu-container">
+  <div class="mobile-menu__container">
+    <div class="mobile-menu__wrapper">
+    </div>
+    <!-- <h1>qwertty</h1> -->
+    <button class="auth_button" type="button"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+      <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+      </svg></button> <!--Ця кнопка прибереться коли зявиться функція Реєстрації -->
+  </div>
+</div>
 
 <!-- <include src="./modal-registration.html"></include> -->
-<script src="/src/js/header.js" type="module"></script>
-<script src="/src/js/open-menu.js" type="module"></script>
+<!-- <script src="/src/js/open-menu-registration.js" type="module"></script> -->
