--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,7 @@
 @import './common';
 
 @import './layout/main/auth';
+@import './layout/main/mobile_menu';
 @import './layout/main/best-books';
 @import './layout/main/categories-list';
 @import './layout/main/categories-list-list';
@@ -18,6 +19,5 @@
 @import './layout/main/support';
 @import './layout/main/dark';
 @import './layout/header';
-
 
 @import './utils/breakpoints';
