--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,42 +1,55 @@
+.link {
+  text-decoration: none;
+  color: $primary-text-light;
+  display: block;
+  cursor: pointer;
+  &:hover,
+  &:focus &:active {
+    color: $accent-text-light;
+  }
+}
+.link-active {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: -0.04em;
+  display: block;
+  justify-content: center;
+  width: 100%;
+  height: 34px;
+  padding: 8px 16px;
+  background: $accent-text-dark;
+  border-radius: 36px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn {
+  display: block;
+  cursor: pointer;
+}
+.call-to-registration-btn {
+  display: none;
+}
 .header-conteiner {
+  background-color: #fff;
   border: 1.5px solid #111111;
   border-radius: 0px 0px 8px 8px;
-  margin: 0px auto;
-  height: 64px;
-  align-items: center;
+  padding: 20px 20px;
+  position: relative;
+  z-index: 100;
+}
+.menu-conteiner-account {
+  display: none;
+}
 
-  @media screen and (min-width: $mobile) {
-    padding: 18px 20px;
-    position: relative;
-    max-width: 375px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    max-width: 768px;
-    padding: 14px 32px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    max-width: 1440px;
-    padding: 14px 24px;
-  }
+.hidden {
+  display: none;
 }
 .switch {
   position: relative;
   display: inline-block;
   width: 40px;
   height: 20px;
-
-  @media screen and (min-width: $mobile) {
-    margin-right: 14px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    margin-right: 24px;
-  }
-  @media screen and (min-width: $desktop) {
-    margin-right: 24px;
-  }
+  margin-right: 14px;
 }
 
 .switch input {
@@ -51,7 +64,6 @@
   right: 0;
   bottom: 0;
   background: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
-  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -70,13 +82,19 @@
 
 input:checked + .slider {
   background: linear-gradient(180deg, #4f2ee8 0%, #686868 100%);
+}
+
+input:focus + .slider {
   box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 input:checked + .slider:before {
-  transform: translateX(20px);
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
+/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
@@ -84,84 +102,163 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
 .logo-name {
-  @media screen and (min-width: $mobile) {
-    margin-right: auto;
-  }
-  @media screen and (min-width: $tablet) {
-    margin-right: 40px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    margin-right: 76px;
-  }
+  margin-right: 144px;
 }
-
 .header-wrap {
+  position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
-
-.burger {
-  height: 28px;
-  width: 28px;
-  background-color: transparent;
-  @media screen and (min-width: $tablet) {
-    display: none;
-  }
-}
-.burger__img {
-  object-fit: cover;
-}
-
 .nav-home-page {
   display: none;
   color: $primary-text-light;
-
-  @media screen and (min-width: $tablet) {
-    display: block;
-    margin-right: 24px;
-  }
-  @media screen and (min-width: $desktop) {
-  }
 }
-
 .nav-shopping-page {
   display: none;
   width: 100%;
-
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.27;
-    letter-spacing: -0.04em;
-    gap: 4px;
-  }
-  @media screen and (min-width: $desktop) {
-    margin-right: 746px;
-  }
 }
 
+.buttons-menu {
+  position: relative;
+}
 .navigation {
+  align-items: center;
+  display: flex;
+  margin-right: auto;
+}
+.nav-list {
   display: flex;
   align-items: center;
-  @media screen and (min-width: $tablet) {
-  }
 }
-
-.nav-list__item {
-  gap: 40px;
-}
-
 .nav-shopping-page__icon {
   display: none;
   height: 20px;
   width: 20px;
+}
+.burger {
+  background-color: transparent;
+  //   display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+.icon-close-menu {
+  right: -10px;
+  bottom: 3px;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  &:hover,
+  &:focus {
+    fill: $accent-text-light;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (max-width: 767px) {
+  .burger {
+    position: relative;
+    width: 28px;
+    height: 28px;
+    padding: 4px;
+  }
+  .burger::before,
+  .burger::after {
+    content: '';
+    background-color: black;
+    position: absolute;
+    height: 2px;
+    left: 0;
+  }
+  .burger::before {
+    top: 7px;
+    width: 90%;
+  }
+  .burger::after {
+    bottom: 7px;
+    width: 70%;
+  }
 
-  @media screen and (min-width: $tablet) {
+  .burger .burger__row {
+    position: absolute;
+    background-color: black;
+    left: 0;
+    width: 90%;
+    height: 2px;
+    top: 15px;
+  }
+  .burger span:last-child {
+    position: absolute;
+    background-color: black;
+    left: 0;
+    width: 70%;
+    height: 2px;
+    top: 11px;
+  }
+  .auth_button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 14px;
+    cursor: pointer;
+    width: 184px;
+    height: 45px;
+    background-color: $button-bgc;
+    border-radius: 18px;
+    color: $primary-text-dark;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.04em;
+    border: 1.5px solid $primary-text-light;
+    &:hover,
+    &:focus {
+      border: 1.5px solid $primary-bgc-light;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .mobile-menu__wrapper {
+      margin-bottom: 25px;
+    }
+  }
+  //   .close-menu-btn::before,
+  //   .close-menu-btn::after {
+  //     background-color: black;
+  //     position: absolute;
+  //     height: 2px;
+  //     left: 0;
+  //   }
+
+  //   .burger::before {
+  //     top: 7px;
+  //     width: 90%;
+  //   }
+  //   .burger::after {
+  //     bottom: 7px;
+  //     width: 70%;
+  //     transform: rotate(-45%);
+  //   }
+}
+
+.call-to-registration-btn {
+  display: none;
+}
+@media screen and (min-width: $tablet) {
+  .icon-close-menu {
+    display: none;
+  }
+  .burger {
+    display: none;
+  }
+  .header-conteiner {
+    padding: 14px 32px;
+  }
+  .nav-list {
+    gap: 16px;
+  }
+  .nav-list__item {
+    margin-right: 24px;
+  }
+  .nav-shopping-page__icon {
     display: block;
     cursor: pointer;
     &:hover,
@@ -169,66 +266,64 @@ input:checked + .slider:before {
       fill: $accent-text-light;
     }
   }
-}
-.link-active {
-  @media screen and (min-width: $mobile) {
+  .navigation {
+    margin-right: auto;
   }
-  @media screen and (min-width: $tablet) {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: -0.04em;
+  .nav-home-page {
     display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 34px;
-    padding: 8px 16px;
-    background: $accent-text-dark;
-    border-radius: 36px;
-  }
-  @media screen and (min-width: $desktop) {
-  }
-}
-.link {
-  text-decoration: none;
-  color: $primary-text-light;
-  cursor: pointer;
-  &:hover,
-  &:focus &:active {
-    color: $accent-text-light;
-  }
-}
-
-.login-thumb {
-  gap: 9px;
-
-  @media screen and (min-width: $mobile) {
-    display: none;
-  }
-
-  @media screen and (min-width: $tablet) {
-    padding: 15px 14px;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.27;
+    letter-spacing: -0.04em;
+  }
+  .logo-name {
+    margin-right: 40px;
+  }
+  .switch {
+    margin-right: 24px;
+  }
+  .nav-shopping-page {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+  .call-to-registration-btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 14px;
+    cursor: pointer;
     width: 184px;
     height: 45px;
-    left: 552px;
-    top: 14px;
-
-    background: $backdrop-popup;
-    border-radius: 36px;
+    background-color: $button-bgc;
+    border-radius: 18px;
+    color: $primary-text-dark;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.04em;
+    border: none;
+    &:hover,
+    &:focus {
+      border: 1.5px solid $primary-bgc-light;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  .buttons-menu {
+    display: none;
   }
 }
-
-.login-thumb__btn {
-  border: none;
-  background: none;
-  color: $primary-text-dark;
-  font-size: 14px;
-  line-height: 1.29;
-  letter-spacing: -0.04em;
-
-  @media screen and (min-width: $tablet) {
+@media screen and(min-width: $desktop) {
+  .header-conteiner {
+    padding: 14px 24px;
+  }
+  .navigation {
+    margin-right: auto; //746px is-open conteiner
+  }
+  .nav-list {
+    gap: 24px;
+  }
+  .logo-name {
+    margin-right: 76px;
   }
 }
