--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,13 +8,13 @@
         <a class="link logo-name" href="/src/index.html"
           >Bookshelf</a
         >
-        <!-- <div class="menu-conteiner-account js-menu-conteiner-account">
+        <div class="menu-conteiner-account js-menu-conteiner-account">
           <ul class="nav-list list">
             <li class="nav-list__item"><a class="link link-active nav-home-page" href="/src/index.html">HOME</a>
             </li>
-            <li class="nav-list__item"><a class="link nav-shopping-page" href="#">SHOPPING LIST<svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>
+            <li class="nav-list__item"><a class="link nav-shopping-page" href="/src/shopping-list.html">SHOPPING LIST<svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>
           </ul>
-        </div> -->
+        </div>
       </nav>
       <label class="switch">
         <input class="js-color-switcher" type="checkbox" name="check" value="yes" />
@@ -35,10 +35,17 @@
       </div>
      
       <div class="munu-conteiner-call-to-registration">
-        <button class="call-to-registration-btn "><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+        <button class="call-to-registration-btn headers__bts" id="all-registration-btns"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
           <use href="/src/images/sprite.svg#icon-arrow-right"></use>
           </svg></button>
+
+          <button class="logged-in__btn headers__bts"><svg class="logged-in__icon" width="37" height="37">
+            <use href="/src/images/sprite.svg#icon-user"></use>
+            </svg><span>Stephen</span><svg width="23" height="26"><use href="/src/images/sprite.svg#icon-Vector"></use></svg></button>
           <!-- <h1>MUNU contaoner</h1> -->
+          <button class="log-out__btn headers__bts" type="button" id="all-registration-btns"><span>Log out</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+            </svg></button>
        </div> 
     </div>
   </div>
@@ -49,11 +56,9 @@
     <div class="mobile-menu__wrapper">
     </div>
     <!-- <h1>qwertty</h1> -->
-    <button class="auth_button" type="button"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+    <button class="auth_button headers__bts" type="button" id="all-registration-btns"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
       <use href="/src/images/sprite.svg#icon-arrow-right"></use>
       </svg></button> <!--Ця кнопка прибереться коли зявиться функція Реєстрації -->
   </div>
 </div>
 
-<!-- <include src="./modal-registration.html"></include> -->
-<!-- <script src="/src/js/open-menu-registration.js" type="module"></script> -->
