--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -22,9 +22,20 @@
   border-radius: 36px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.btn {
-  display: block;
+.header__btns {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 14px;
   cursor: pointer;
+  width: 184px;
+  height: 45px;
+  background-color: $button-bgc;
+  border-radius: 18px;
+  color: $primary-text-dark;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
 }
 .call-to-registration-btn {
   display: none;
@@ -38,7 +49,7 @@
   z-index: 100;
 }
 .menu-conteiner-account {
-  display: none;
+  display: block;
 }
 
 .hidden {
@@ -123,6 +134,13 @@ input:checked + .slider:before {
 .buttons-menu {
   position: relative;
 }
+
+.logged-in__btn {
+  display: flex;
+  align-items: center;
+  width: 184px;
+  height: 45px;
+}
 .navigation {
   align-items: center;
   display: flex;
@@ -156,7 +174,13 @@ input:checked + .slider:before {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
 @media screen and (max-width: 767px) {
+  .logged-in__btn,
+  .log-out__btn {
+    display: none;
+  }
+
   .burger {
     position: relative;
     width: 28px;
@@ -210,6 +234,12 @@ input:checked + .slider:before {
     font-size: 14px;
     line-height: 1.29;
     letter-spacing: -0.04em;
+    border: none;
+    &:hover,
+    &:focus {
+      border: 1.5px solid $primary-bgc-light;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
     border: 1.5px solid $primary-text-light;
     &:hover,
     &:focus {
@@ -219,29 +249,15 @@ input:checked + .slider:before {
     .mobile-menu__wrapper {
       margin-bottom: 25px;
     }
+    .logged-in__btn {
+      display: none;
+    }
   }
-  //   .close-menu-btn::before,
-  //   .close-menu-btn::after {
-  //     background-color: black;
-  //     position: absolute;
-  //     height: 2px;
-  //     left: 0;
-  //   }
-
-  //   .burger::before {
-  //     top: 7px;
-  //     width: 90%;
-  //   }
-  //   .burger::after {
-  //     bottom: 7px;
-  //     width: 70%;
-  //     transform: rotate(-45%);
-  //   }
 }
 
-.call-to-registration-btn {
-  display: none;
-}
+// .call-to-registration-btn {
+//   display: none;
+// }
 @media screen and (min-width: $tablet) {
   .icon-close-menu {
     display: none;
@@ -309,8 +325,67 @@ input:checked + .slider:before {
       transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
+  .logged-in__btn {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 9px;
+    padding: 15px 14px;
+    cursor: pointer;
+    width: 184px;
+    height: 45px;
+    background-color: $button-bgc;
+    border-radius: 18px;
+    color: $primary-text-dark;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.04em;
+    border: none;
+    &:hover,
+    &:focus {
+      border: 1.5px solid $primary-bgc-light;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .logged-in__btn span {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 29px;
+    letter-spacing: -0.02em;
+  }
   .buttons-menu {
     display: none;
+  }
+
+  .log-out__btn {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 14px;
+    cursor: pointer;
+    width: 184px;
+    height: 45px;
+    background-color: #fff;
+    border-radius: 18px;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.04em;
+    border: 1.5px solid #111111;
+    &:hover,
+    &:focus {
+      border-color: 1px solid #202024;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  .log-out__btn span {
+    color: $primary-text-light;
+    font-weight: 500;
+    font-size: 14px;
+
+    letter-spacing: -0.04em;
   }
 }
 @media screen and(min-width: $desktop) {
