--- a/src/partials/categories-list-list.html
+++ b/src/partials/categories-list-list.html
@@ -1,14 +1,19 @@
-<section class="home__page container">
-  <aside>
-    <div class="categories">
-        
+<section>
+  <div class="home__page-container container">
+    <aside class="sidebar-container">
+      <div class="categories"></div>
+      <div class="categories__support">
+        <include src="./partials/support-ukraine.html"></include>
+      </div>
+      
+    </aside>
+    <div class="conteiner__books">
+      <include src="./partials/best-selling-books.html"></include>
+      <div class="conteiner__books-box">
+        <div class="name__categore-box"></div>
+        <div class="books"></div>
+      </div>
     </div>
-    <include src="./partials/support-ukraine.html"></include>
-  </aside>
-  <div class="conteiner__books">
-    <include src="./partials/best-selling-books.html"></include>
-    <div class="name__categore-box"></div>
-    <div class="books"></div>
   </div>
 </section>
 
