--- a/src/sass/layout/main/_categories-list-list.scss
+++ b/src/sass/layout/main/_categories-list-list.scss
@@ -1,33 +1,154 @@
-.home__page {
-  display: flex;
-  padding-top: 40px;
+.home__page-container {
+border: 1.5px solid #111;
+padding-top: 40px;
+width: 100%;
+  // @media screen and (min-width: $mobile) {
+  //     width: $mobile;
+  //   }
+
+  @media screen and (min-width: $tablet) {
+
+
+    width: $tablet;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    padding-top: 40px;
+    width: 100%;
+
+    width: $desktop;
+    
+  }
+}
+
+.sidebar-container {
+  width: 335px;
+  height: 228px;
+  width: 100%;
+
+  @media screen and (min-width: $tablet) {
+    padding: 0 32px;
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    width: 337px;
+    height: 472px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: block;
+    flex-direction: column;
+    width: 356px;
+    height: 472px;
+  }
+  /* полоса прокрутки (скроллбар) */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 167px;
+    background-color: #F6F6F6;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #E0E0E0;
+    border-radius: 9em;
+    box-shadow: inset 1px 1px 10px #f3faf7;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: inherit;
+  }
+
+  
 }
 
 .categories {
-  width: 356px;
-  height: 472px;
   overflow-y: scroll;
+  width: 335px;
+  height: 228px;
+  
+  @media screen and (min-width: $mobile) {
+    //     width: $mobile;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 337px;
+    height: 472px;
+
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 356px;
+    height: 472px;
+
+    // scroll-snap-type: y proximity;
+  }
+}
+.categories__support {
+ padding-top: 40px;
+@media screen and (min-width: $tablet) {
+    padding-top: 0;
+      
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 86px;
+
+  }
 }
 
 .list_name {
+  font-weight: 400;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 1.3;
   margin-bottom: 32px;
   letter-spacing: -0.02em;
   color: $categories-text-light;
+  cursor: pointer;
+
 }
 
 .list_name:hover {
+  font-weight: 700;
   color: $accent-text-light;
+  text-transform: uppercase
 }
 
 .list_name:focus {
+  font-weight: 700;
   color: $accent-text-light;
+  text-transform: uppercase
 }
 
 /* .text {} */
 .conteiner__books {
+  width: 100%; 
   padding-left: 40px;
+  @media screen and (min-width: $tablet) {
+    padding-left: 0;
+
+  }
+
+  @media screen and (min-width: $desktop) {
+    
+
+  }
+}
+.conteiner__books-box {
+  width: 100%;
+  
+
+  @media screen and (min-width: $tablet) {
+      padding-top: 100px;
+  
+    }
+  
+    @media screen and (min-width: $desktop) {
+      padding-top: 0;
+  
+    }
+  
 }
 
 .name__categore {
@@ -50,6 +171,27 @@
   // margin-left: auto;
   // margin-right: auto;
 }
+.books-container {
+  display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+     // padding: 15px 15px;
+    gap: 15px;
+    @media screen and (min-width: $tablet) {
+        display: flex;
+          // justify-content: center;
+          flex-wrap: wrap;
+          // padding: 15px 15px;
+          gap: 25px;
+    
+      }
+    
+      @media screen and (min-width: $desktop) {
+      
+    
+        // scroll-snap-type: y proximity;
+      }
+}
 
 .book-card {
   display: flex;
@@ -57,8 +199,23 @@
   align-items: flex-start;
   padding: 0px;
   gap: 14px;
-  width: 180px;
-  max-height: 306px;
+  width: 335px;
+  height: 571px;
+
+  
+  
+    @media screen and (min-width: $tablet) {
+      width: 218px;
+      height: 366px;
+  
+    }
+  
+    @media screen and (min-width: $desktop) {
+      width: 180px;
+      height: 306px;
+  
+      // scroll-snap-type: y proximity;
+    }
 }
 
 .book-card__img-box {
@@ -99,6 +256,7 @@
 
   color: $secondary-text;
 }
+
 .categories .list_name.selected {
   text-transform: uppercase;
   color: #4f2ee8;
