--- a/src/sass/layout/main/_best-books.scss
+++ b/src/sass/layout/main/_best-books.scss
@@ -122,6 +122,8 @@
 @media screen and (min-width: $tablet) {
     .books_hero_title {
         padding-top: 100px;
+        font-size: 48px;
+            
     }
 
     .info-author__item--main-page {
