--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,44 +25,52 @@
               <!-- <svg class="burger__icon" width="28" height="28" aria-label="Перемикач мобільного меню">
                 <use class="burger__link" href="/src/images/sprite.svg#icon-burger"></use>
               </svg> -->
-            
             <button class="close-menu-btn btn hidden" id="js-close-menu" type="button" aria-expanded="false" aria-controls="menu-conteiner">
               <img src="/src/images/header/x-close.png">
           <!-- <svg class="icon-close-menu__icon" width="28" height="28" aria-label="Перемикач мобільного меню">
                 <use class="icon-close-menu__link" href="/src/images/sprite.svg#icon-cross"></use>
               </svg>   -->
-            </button> 
+            </button>
       </div>
-     
       <div class="munu-conteiner-call-to-registration">
         <button class="call-to-registration-btn" id="signUpAuth"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
           <use href="/src/images/sprite.svg#icon-arrow-right"></use>
           </svg></button>
-
           <button class="logged-in__btn" id="userInAuth"> <svg class="logged-in__icon" width="37" height="37">
             <use href="/src/images/sprite.svg#icon-user"></use>
             </svg><span>Stephen</span><svg width="23" height="26"><use href="/src/images/sprite.svg#icon-Vector"></use></svg></button>
           <!-- <h1>MUNU contaoner</h1> -->
-          <button class="log-out__btn" type="button" id="logOutAuth "><span>Log out</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+          <button class="log-out__btn" type="button" id="logOutAuth"><span>Log out</span><svg class="call-to-registration-btn__icon" width="20" height="20">
             <use href="/src/images/sprite.svg#icon-arrow-right"></use>
             </svg></button>
-       </div> 
+       </div>
     </div>
   </div>
 </div>
 </header>
 <div class="mobile-menu js-menu-container">
   <div class="mobile-menu__container">
-    <div class="mobile-menu__wrapper">
+    
+    <div class="mobile-menu-logged-conteiner">
+
+      <button class="auth_button headers__bts" type="button" id="signUpAuthMobile"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+        <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+        </svg></button>
+
+      <button class="userInAuthMobile" id="userInAuthMobile"><svg class="userInAuthMobile__icon" width="37" height="37">
+          <use href="/src/images/sprite.svg#icon-user"></use>
+          </svg><span>Stephen</span></button>
+
+          <ul class="shoppingListButtonMobile-list list">
+
+              <li class="homeButtonMobile" id="homeButtonMobile"><a class=" link-active homeButtonMobile__link" href="/src/index.html">HOME</a>
+              </li>
+
+              <li class="shoppingListButtonMobile" id="shoppingListButtonMobile"><a class="shoppingListButtonMobile__link" href="/src/shopping-list.html">SHOPPING LIST<svg class="shoppingListButtonMobile__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>
+          </ul>
+        <button class="logOutAuthMobile" type="button"id="logOutAuthMobile">Log Out</span><svg class="logOutAuthMobile__icon" width="20" height="20">
+          <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+          </svg></button>
     </div>
-    <!-- <h1>qwertty</h1> -->
-    <button class="auth_button headers__bts" type="button" id="signUpAuthMobile"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
-      <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-      </svg></button>
-      <button class="userInAuthMobile" id="userInAuthMobile">USER</button>
-      <button class="shoppingListButtonMobile" id="shoppingListButtonMobile">Shopping List</button> 
-      <button class="homeButtonMobile" id="homeButtonMobile">Home</button>
-      <button class="logOutAuthMobile" id="logOutAuthMobile">Log Out</button>
   </div>
 </div>
-
