--- a/src/sass/layout/main/_mobile_menu.scss
+++ b/src/sass/layout/main/_mobile_menu.scss
@@ -4,12 +4,13 @@
   left: 0;
   width: 100%;
   height: 100%;
+
   background-image: url('/src/images/header/Group-imgs.png');
   background-repeat: no-repeat;
   background-position: 0 230;
   background-size: contain;
-  background-color: $backdrop-popup;
-  z-index: 5;
+  background: $fonds-bgc;
+  // z-index: 5;
   opacity: 0;
   transform: translateY(-150%);
   transition: transform 250ms cubic-bezier(0.12, 0.56, 0.79, 0.6),
@@ -29,12 +30,16 @@
   padding-left: 16px;
   padding-right: 16px;
   margin: 0 auto;
+  height: 100%;
 
   @media screen and (min-width: 479.98px) {
     width: $mobile;
   }
 }
 
+.mobile-menu__logged-conteiner {
+  height: 100%;
+}
 .mobile-menu__wrapper {
   display: flex;
   align-items: center;
