--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -116,6 +116,7 @@ input:checked + .slider:before {
 }
 
 .logo-name {
+  margin-left: 8px;
   margin-right: 144px;
 }
 .header-wrap {
@@ -471,5 +472,5 @@ input:checked + .slider:before {
   }
   .logo-name {
     margin-right: 76px;
-  }       
+  }
 }
