--- a/src/sass/layout/main/_categories-list-list.scss
+++ b/src/sass/layout/main/_categories-list-list.scss
@@ -1,13 +1,11 @@
 .home__page-container {
-padding-top: 40px;
-width: 100%;
+  padding-top: 40px;
+  width: 100%;
   // @media screen and (min-width: $mobile) {
   //     width: $mobile;
   //   }
 
   @media screen and (min-width: $tablet) {
-
-
     width: $tablet;
   }
 
@@ -17,18 +15,16 @@ width: 100%;
     width: 100%;
 
     width: $desktop;
-    
   }
 }
-.sidebar{
-  
+.sidebar {
   @media screen and (min-width: $tablet) {
-      display: flex;
-      gap: 32px;
+    display: flex;
+    gap: 32px;
   }
 
   @media screen and (min-width: $desktop) {
-    display: block;    
+    display: block;
   }
 }
 .sidebar-container {
@@ -36,27 +32,25 @@ width: 100%;
   height: 228px;
   width: 100%;
   /* полоса прокрутки (скроллбар) */
-    ::-webkit-scrollbar {
-      width: 8px;
-      height: 167px;
-      background-color: #F6F6F6;
-    }
-  
-    ::-webkit-scrollbar-thumb {
-      background-color: #E0E0E0;
-      border-radius: 9em;
-      box-shadow: inset 1px 1px 10px #f3faf7;
-    }
-  
-    ::-webkit-scrollbar-thumb:hover {
-      background-color: inherit;
-    }
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 167px;
+    background-color: #f6f6f6;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #e0e0e0;
+    border-radius: 9em;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: inherit;
+  }
   @media screen and (min-width: $tablet) {
     // padding: 0 32px;
-    
+
     width: 337px;
     height: 472px;
-    
   }
 
   @media screen and (min-width: $desktop) {
@@ -66,16 +60,13 @@ width: 100%;
     width: 356px;
     height: 472px;
   }
-
-
-  
 }
 
 .categories {
   overflow-y: scroll;
   width: 335px;
   height: 228px;
-  
+
   @media screen and (min-width: $mobile) {
     //     width: $mobile;
   }
@@ -83,7 +74,6 @@ width: 100%;
   @media screen and (min-width: $tablet) {
     width: 337px;
     height: 472px;
-
   }
 
   @media screen and (min-width: $desktop) {
@@ -94,15 +84,13 @@ width: 100%;
   }
 }
 .categories__support {
- padding-top: 40px;
-@media screen and (min-width: $tablet) {
+  padding-top: 40px;
+  @media screen and (min-width: $tablet) {
     padding-top: 0;
-      
   }
 
   @media screen and (min-width: $desktop) {
     padding-top: 86px;
-
   }
 }
 
@@ -114,49 +102,42 @@ width: 100%;
   letter-spacing: -0.02em;
   color: $categories-text-light;
   cursor: pointer;
-
 }
 
 .list_name:hover {
   font-weight: 700;
   color: $accent-text-light;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
 
 .list_name:focus {
   font-weight: 700;
   color: $accent-text-light;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
 
 /* .text {} */
 .conteiner__books {
-  width: 100%; 
+  width: 100%;
   padding-left: 40px;
   @media screen and (min-width: $tablet) {
     padding-left: 0;
-
   }
 
   @media screen and (min-width: $desktop) {
     padding-left: 33px;
-
   }
 }
 .conteiner__books-box {
   width: 100%;
-  
 
   @media screen and (min-width: $tablet) {
-      padding-top: 100px;
-  
-    }
-  
-    @media screen and (min-width: $desktop) {
-      padding-top: 0;
-  
-    }
-  
+    padding-top: 100px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 0;
+  }
 }
 
 .name__categore {
@@ -165,14 +146,12 @@ width: 100%;
   line-height: 1.1875;
   letter-spacing: -0.04em;
   color: $primary-text-light;
-    @media screen and (min-width: $tablet) {
-      font-size: 48px;
-      line-height: 1.08;
-    }
-              @media screen and (min-width: $desktop) {
-          
-      }
- 
+  @media screen and (min-width: $tablet) {
+    font-size: 48px;
+    line-height: 1.08;
+  }
+  @media screen and (min-width: $desktop) {
+  }
 }
 
 .books {
@@ -188,24 +167,21 @@ width: 100%;
 }
 .books-container {
   display: flex;
-    justify-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  // padding: 15px 15px;
+  gap: 15px;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    // justify-content: center;
     flex-wrap: wrap;
-     // padding: 15px 15px;
-    gap: 15px;
-    @media screen and (min-width: $tablet) {
-        display: flex;
-          // justify-content: center;
-          flex-wrap: wrap;
-          // padding: 15px 15px;
-          gap: 25px;
-    
-      }
-    
-      @media screen and (min-width: $desktop) {
-      
-    
-        // scroll-snap-type: y proximity;
-      }
+    // padding: 15px 15px;
+    gap: 25px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    // scroll-snap-type: y proximity;
+  }
 }
 
 .book-card {
@@ -217,20 +193,17 @@ width: 100%;
   width: 335px;
   height: 571px;
 
-  
-  
-    @media screen and (min-width: $tablet) {
-      width: 218px;
-      height: 366px;
-  
-    }
-  
-    @media screen and (min-width: $desktop) {
-      width: 180px;
-      height: 306px;
-  
-      // scroll-snap-type: y proximity;
-    }
+  @media screen and (min-width: $tablet) {
+    width: 218px;
+    height: 366px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 180px;
+    height: 306px;
+
+    // scroll-snap-type: y proximity;
+  }
 }
 
 .book-card__img-box {
