--- a/src/sass/layout/main/_best-books.scss
+++ b/src/sass/layout/main/_best-books.scss
@@ -114,8 +114,8 @@ width: 335px;
     white-space: nowrap;
     cursor: pointer;
     &:hover, &:focus {
-            color:#4F2EE8;
-            
+            color: white;
+            background-color: #4F2EE8;
         }
 }
 
