--- a/src/partials/categories-list-list.html
+++ b/src/partials/categories-list-list.html
@@ -5,7 +5,6 @@
       <div class="categories__support">
         <include src="./partials/support-ukraine.html"></include>
       </div>
-      
     </aside>
     <div class="conteiner__books">
       <include src="./partials/best-selling-books.html"></include>
@@ -13,8 +12,11 @@
         <div class="name__categore-box"></div>
         <div class="books"></div>
       </div>
+      <button class="jumpUpBtn" id="jumpUpBtn" title="Go to top">
+        <svg class="jumpup__icon" height="24" width="24">
+          <use href=".//../images/sprite.svg#icon-angle-down"></use>
+        </svg>
+      </button>
     </div>
   </div>
 </section>
-
-
