--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -19,5 +19,6 @@
 @import './layout/main/support';
 @import './layout/main/dark';
 @import './layout/header';
+@import './layout/main/jump';
 
 @import './utils/breakpoints';
