--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -305,6 +305,7 @@ input:checked + .slider:before {
   gap: 4px;
   position: absolute;
   bottom: 20px;
+  background-color: #fff;
 }
 
 @media screen and (max-width: 767px) {
