--- a/src/sass/layout/main/_shopping-list.scss
+++ b/src/sass/layout/main/_shopping-list.scss
@@ -274,6 +274,19 @@
             right: 24px;     
         }
     }
+
+//     &__deleteBtn--icon {
+
+//         width: 28px;
+//         height: 28px;
+
+//         @media screen and (min-width: $tablet) {
+
+//             width: 34px;
+//             height: 34px; 
+        
+//     }
+// }
 }
 
 
