--- a/src/sass/layout/main/_support.scss
+++ b/src/sass/layout/main/_support.scss
@@ -5,16 +5,21 @@
   height: 352px;
   padding-top: 24px;
   padding-left: 40px;
+  padding-bottom: 20px;
+  padding-right: 58px;
   background: $fonds-bgc;
   box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
   border-radius: 16px;
   @media screen and (min-width: $tablet) {
     height: 472px;
     width: 335px;
+    padding-bottom: 14px;
   }
   @media screen and (min-width: $desktop) {
     width: 356px;
     height: 490px;
+    padding-bottom: 24px;
+    padding-right: 79px;    
   }
 }
 .swiper-container {
