--- a/src/sass/layout/main/_auth.scss
+++ b/src/sass/layout/main/_auth.scss
@@ -109,6 +109,13 @@
 
 .signin-button,
 .signup-button {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
   background-color: $primary-text-light;
   color: $header-bgc-light;
   border-radius: 40px;
@@ -124,6 +131,7 @@
   color: $categories-text-light;
 }
 .active-tab {
+  cursor: pointer;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: -0.01em;
