--- a/src/sass/layout/main/_categories-list-list.scss
+++ b/src/sass/layout/main/_categories-list-list.scss
@@ -2,7 +2,7 @@
   padding-top: 40px;
   padding-bottom: 80px;
   max-width: $mobile;
-  
+
   @media screen and (min-width: $tablet) {
     max-width: $tablet;
     padding-bottom: 100px;
@@ -50,7 +50,7 @@
   }
   @media screen and (min-width: $tablet) {
     // padding: 0 32px;
-        flex-direction: row;
+    flex-direction: row;
     gap: 32px;
     height: 472px;
   }
@@ -76,7 +76,6 @@
   @media screen and (min-width: $desktop) {
     width: 356px;
     height: 472px;
-
   }
 }
 .categories__support {
@@ -99,10 +98,9 @@
   color: $categories-text-light;
   cursor: pointer;
   @media screen and (min-width: $tablet) {
-      margin-bottom: 32px;
-    }
+    margin-bottom: 32px;
+  }
 }
-
 
 .list_name:hover {
   font-weight: 700;
@@ -122,7 +120,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   @media screen and (min-width: $tablet) {
     padding-top: 100px;
     padding-left: 0;
@@ -136,12 +134,12 @@
 .conteiner__books-box {
   width: 100%;
   display: flex;
-  align-items: center;
+  // align-items: center;
   flex-direction: column;
   justify-content: center;
-  
+
   @media screen and (min-width: $tablet) {
-          padding-top: 0;
+    padding-top: 0;
   }
 
   @media screen and (min-width: $desktop) {
@@ -155,9 +153,9 @@
   line-height: 1.1875;
   letter-spacing: -0.04em;
   color: $primary-text-light;
-      
-    margin: 0;
-    
+
+  margin: 0;
+
   @media screen and (min-width: $tablet) {
     font-size: 48px;
     line-height: 1.08;
@@ -173,12 +171,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   gap: 15px;
   @media screen and (min-width: $tablet) {
-   flex-direction: row;
-   flex-wrap: wrap;
-   gap: 25px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 25px;
   }
 }
 
@@ -208,14 +206,14 @@
   width: 100%;
   height: 485px;
   @media screen and (min-width: $tablet) {
-        height: 316px;
-    }
-  
-    // @media screen and (min-width: $desktop) {
-    //   height: 256px;
-  
-      // scroll-snap-type: y proximity;
-    // }
+    height: 316px;
+  }
+
+  // @media screen and (min-width: $desktop) {
+  //   height: 256px;
+
+  // scroll-snap-type: y proximity;
+  // }
 }
 
 .book-card__img {
@@ -225,9 +223,9 @@
   border-radius: 8px;
   display: block;
   @media screen and (min-width: $tablet) {
-      height: 316px;
-    }
-  
+    height: 316px;
+  }
+
   @media screen and (min-width: $desktop) {
     height: 256px;
   }
