--- a/src/sass/layout/main/_mobile_menu.scss
+++ b/src/sass/layout/main/_mobile_menu.scss
@@ -3,14 +3,14 @@
   top: 60;
   left: 0;
   width: 100%;
+  padding: 50px 20px 20px;
   height: 100%;
-
-  background-image: url('/src/images/header/Group-imgs.png');
-  background-repeat: no-repeat;
-  background-position: 0 230;
-  background-size: contain;
+  // background-image: url('/src/images/header/group.jpg');
+  // background-repeat: no-repeat;
+  // background-position: 0 230;
+  // background-size: contain;
   background: $fonds-bgc;
-  // z-index: 5;
+  // z-index: 3;
   opacity: 0;
   transform: translateY(-150%);
   transition: transform 250ms cubic-bezier(0.12, 0.56, 0.79, 0.6),
@@ -19,87 +19,13 @@
   &.open-menu {
     transform: translateY(0);
     opacity: 1;
-  }
-
-  @media screen and (min-width: 767.98px) {
-    display: none;
+    z-index: 10;
   }
 }
 
-.mobile-menu__container {
-  padding-left: 16px;
-  padding-right: 16px;
-  margin: 0 auto;
-  height: 100%;
-
-  @media screen and (min-width: 479.98px) {
-    width: $mobile;
-  }
-}
-
-.mobile-menu__logged-conteiner {
-  height: 100%;
-}
-.mobile-menu__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 68px;
-}
-
-.close-btn {
-  svg {
-    stroke: var(--text-color);
-    fill: var(--text-color);
-  }
-}
-
-.navbar-mobile__icon-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
-  background-color: var(--accent-color);
-  border-radius: 50% 50%;
-
-  &--current {
-    border: 1px solid #f4f4f4;
-  }
-}
-
-.navbar-mobile__list {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-.navbar-mobile__link {
-  display: flex;
-  align-items: center;
-  gap: 14px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: calc(22 / 16);
-  position: relative;
-
-  &--current {
-    height: 44px;
-    width: 100%;
-    background-color: var(--accent-color);
-    box-shadow: 0 0 0 100vmax var(--accent-color);
-    clip-path: inset(0 -100vmax);
-    color: #f4f4f4;
-  }
-}
-
-.current-page__icon {
-  transform: rotate(270deg);
+.mobile-menu-books-imgBg {
   position: absolute;
-  right: -1px;
-}
-
-.navbar-mobile__icon {
-  fill: none;
-  stroke: #f4f4f4;
+  bottom: 0;
+  width: 100%;
+  left: 0;
 }
