--- a/src/partials/auth.html
+++ b/src/partials/auth.html
@@ -15,6 +15,7 @@
             id="email"
             placeholder="EMAIL"
             required
+            autocomplete="email"
           />
           <span>
             <svg class="icon-auth email-signin">
@@ -57,6 +58,7 @@
             id="signup-email"
             placeholder="EMAIL"
             required
+            autocomplete="email"
           />
           <span>
             <svg class="icon-auth">
