--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
           <ul class="nav-list list">
             <li class="nav-list__item"><a class="link link-active nav-home-page" id="homeButton" href="/src/index.html">HOME</a>
             </li>
-            <li class="nav-list__item"><a class="link nav-shopping-page" id="shoppingListButton" href="/src/shopping-list.html">SHOPPING LIST<svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>
+            <li class="nav-list__item"><a class="link nav-shopping-page" id="shoppingListButton" href="/src/shopping-list.html">SHOPPING LIST <svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg> <span id="shoppingNumbers"></span></a></li>
           </ul>
         </div>
       </nav>
@@ -39,7 +39,7 @@
 
             <li><button class="logged-in__btn" id="userInAuth"> <svg class="logged-in__icon" width="37" height="37">
             <use href="/src/images/sprite.svg#icon-user"></use>
-            </svg><span>Stephen</span><svg width="23" height="26"><use href="/src/images/sprite.svg#icon-Vector"></use>
+            </svg><span id="userNameAuth"></span><svg width="23" height="26"><use href="/src/images/sprite.svg#icon-Vector"></use>
             </svg></button></li>
 
             <li><button class="log-out__btn" type="button" id="logOutAuth"><span>Log out</span><svg class="call-to-registration-btn__icon" width="20" height="20">
@@ -52,29 +52,45 @@
 </div>
 </header>
 
-  <div class="mobile-menu js-menu-container">
-    <div class="mobile-menu__container">
-      <div class="mobile-menu-logged-conteiner">
-        <button class="auth_button" type="button" id="signUpAuthMobile"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
-        <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-        </svg></button>
-
-        <img class="mobile-menu-books-imgBg" alt="imagesBg" src="/src/images/header/Group-imgs.png">
-
-        <button class="userInAuthMobile" id="userInAuthMobile"><svg class="userInAuthMobile__icon" width="37" height="37">
-          <use href="/src/images/sprite.svg#icon-user"></use>
-          </svg><span>Stephen</span></button>
-
-        <ul class="shoppingListButtonMobile-list list">
-
-            <li class="homeButtonMobile" id="homeButtonMobile"><a class=" link-active homeButtonMobile__link" href="/src/index.html">HOME</a>
-            </li>
-            <li class="shoppingListButtonMobile" id="shoppingListButtonMobile"><a class="shoppingListButtonMobile__link" href="/src/shopping-list.html">SHOPPING LIST<svg class="shoppingListButtonMobile__icon"><use class="shoppingListButtonMobile__link" href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>
-
-        </ul>
-        <button class="logOutAuthMobile" type="button"id="logOutAuthMobile">Log Out</span><svg class="logOutAuthMobile__icon" width="20" height="20">
+<div class="mobile-menu js-menu-container">
+  <div class="mobile-menu__container">
+    <img class="mobile-menu-books-imgBg" alt="imagesBg" src="/src/images/header/Group-imgs.png">
+    <div class="mobile-menu-logged-conteiner">
+      <button class="auth_button" type="button" id="signUpAuthMobile">
+        <span>Sign up</span>
+        <svg class="call-to-registration-btn__icon" width="20" height="20">
           <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-          </svg></button>
-      </div>
+        </svg>
+      </button>
+
+      <button class="userInAuthMobile" id="userInAuthMobile">
+        <svg class="userInAuthMobile__icon" width="37" height="37">
+          <use href="/src/images/sprite.svg#icon-user"></use>
+        </svg>
+        <span id="userNameAuthMobile"></span>
+      </button>
+
+      <ul class="shoppingListButtonMobile-list list">
+        <li class="homeButtonMobile" id="homeButtonMobile">
+          <a class="homeButtonMobile__link" href="/src/index.html">HOME<svg class="homeButtonMobile__icon">
+              <use class="homeButtonMobile__link" href="/src/images/sprite.svg#icon-internetarchive"></use>
+            </svg></a>
+        </li>
+        <li class="shoppingListButtonMobile" id="shoppingListButtonMobile">
+          <a class="shoppingListButtonMobile__link" href="/src/shopping-list.html">
+            SHOPPING LIST<svg class="shoppingListButtonMobile__icon">
+              <use class="shoppingListButtonMobile__link" href="/src/images/sprite.svg#icon-uil_cart"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <button class="logOutAuthMobile" type="button" id="logOutAuthMobile">
+        <span>Log Out</span>
+        <svg class="logOutAuthMobile__icon" width="20" height="20">
+          <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+        </svg>
+      </button>
     </div>
   </div>
+</div>
