--- a/src/sass/layout/main/_mobile_menu.scss
+++ b/src/sass/layout/main/_mobile_menu.scss
@@ -1,20 +1,20 @@
 .mobile-menu {
-  position: absolute;
-  top: 60;
+  position: fixed;
+  top: 0;
   left: 0;
   width: 100%;
-  padding: 50px 20px 20px;
   height: 100%;
   background: $fonds-bgc;
   opacity: 0;
-  transform: translateY(-150%);
+  transform: translateY(-100%);
   transition: transform 250ms cubic-bezier(0.12, 0.56, 0.79, 0.6),
     opacity 1000ms ease-in;
+  z-index: 100;
+  overflow: hidden;
 
   &.open-menu {
     transform: translateY(0);
     opacity: 1;
-    z-index: 10;
   }
 }
 
@@ -27,7 +27,6 @@
 
 .burger {
   background-color: transparent;
-  //   display: inline-flex;
   margin: 0;
   padding: 0;
   border: none;
@@ -36,12 +35,14 @@
 .close-menu-btn {
   background: none;
 }
+
 .icon-close-menu {
   right: -10px;
   bottom: 3px;
   position: absolute;
   background-color: transparent;
   border: none;
+
   &:hover,
   &:focus {
     fill: $accent-text-light;
@@ -49,8 +50,10 @@
   }
 }
 
+
 .auth_button {
-  position: relative;
+  margin-top: 100px;
+  margin-left: 40px;
   display: none;
   align-items: center;
   justify-content: space-between;
@@ -65,25 +68,34 @@
   line-height: 1.29;
   letter-spacing: -0.04em;
   border: none;
+
   &:hover,
   &:focus {
     border: 1.5px solid $primary-bgc-light;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
   border: 1.5px solid $primary-text-light;
+
   &:hover,
   &:focus {
     border: 1.5px solid $primary-bgc-light;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
   .mobile-menu__wrapper {
     margin-bottom: 25px;
   }
 }
 
 .userInAuthMobile {
+  z-index: 101;
+  margin-top: 100px;
+  margin-left: 40px;
   display: none;
-  background: none;
+  background-color: $accent-text-dark;
+  padding: 10px 20px;
+  border-radius: 20px;
   align-items: center;
   gap: 9px;
   margin-bottom: 130px;
@@ -101,54 +113,14 @@
   }
 }
 
-.homeButtonMobile {
-  display: none;
-}
-
-.shoppingListButtonMobile {
-  display: none;
-  align-items: center;
-  justify-content: center;
-  color: $primary-bgc-light;
-  &__icon {
-    fill: $primary-bgc-light;
-    height: 20px;
-    width: 20px;
-  }
-  &__link {
-    color: $header-bgc-light;
-    display: flex;
-    align-items: center;
-  }
-}
-
-.logOutAuthMobile {
-  display: none;
-  align-items: center;
-  justify-content: space-between;
-  padding: 14px 24px;
-  border: 1.5px solid $primary-text-light;
-  border-radius: 18px;
-  gap: 4px;
-  position: absolute;
-  bottom: 20px;
-  background-color: $primary-text-dark;
-}
-
-// .logOutAuthMobile {
-//   display: flex;
-// }
-
 .shoppingListButtonMobile-list {
+  width: 100%;
+  position: absolute;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   align-content: center;
-  align-items: flex-start;
-}
-
-.shoppingListButtonMobile {
-  display: flex;
+  align-items: center;
 }
 
 .shoppingListButtonMobile:hover,
@@ -158,19 +130,64 @@
 }
 
 .homeButtonMobile {
-  margin-bottom: 18px;
+  padding: 8px 16px;
+  border-radius: 20px;
+  background-color: $secondary-text;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  color: $primary-bgc-light;
+  margin-bottom: 20px;
+  &__icon {
+    fill: $primary-bgc-light;
+    height: 18px;
+    width: 18px;
+  }
+
   &__link {
-    color: $primary-text-light;
+    color: $header-bgc-light;
+    display: flex;
+    gap: 5px;
+    align-items: center;
   }
 }
 
-.logged-in__btn,
-.log-out__btn {
+.shoppingListButtonMobile {
+  padding: 8px 16px;
+  border-radius: 20px;
+  background-color: $secondary-text;
   display: none;
+  align-items: center;
+  justify-content: center;
+  color: $primary-bgc-light;
+
+  &__icon {
+    fill: $primary-bgc-light;
+    height: 20px;
+    width: 20px;
+  }
+
+  &__link {
+    color: $header-bgc-light;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+  }
 }
 
-.userInAuthMobile {
-  display: flex;
+.logOutAuthMobile {
+  margin-bottom: 30px;
+  position: absolute;
+  margin-left: 40px;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  padding: 14px 24px;
+  border: 1.5px solid $primary-text-light;
+  border-radius: 18px;
+  gap: 4px;
+  bottom: 20px;
+  background-color: $primary-text-dark;
 }
 
 .burger {
@@ -193,6 +210,7 @@
   top: 7px;
   width: 90%;
 }
+
 .burger::after {
   bottom: 7px;
   width: 70%;
@@ -214,8 +232,4 @@
   width: 70%;
   height: 2px;
   top: 11px;
-}
-
-.auth_button {
-  display: flex;
 }
