--- a/src/sass/layout/main/_dark.scss
+++ b/src/sass/layout/main/_dark.scss
@@ -123,7 +123,7 @@
 }
 
 // --стилі темної теми для шопінг ліст
-.dark .dark .shopping-list__title {
+.dark .shopping-list__title {
   color: $primary-text-dark;
 }
 
