--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
 @import './abstracts/variables';
 @import './abstracts/modal-card';
+@import './abstracts/pagination';
 
 @import './base/fonts';
 @import './base/base';
