--- a/src/sass/abstracts/_modal-card.scss
+++ b/src/sass/abstracts/_modal-card.scss
@@ -181,6 +181,17 @@
   @media screen and (min-width: $tablet) {
     min-width: 499px;
   }
+
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: $cubic;
+
+  &:hover,
+  &:focus {
+    background-color: $accent-text-light;
+    color: $header-bgc-light;
+    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.15);
+  }
 }
 
 .btn-modal-card {
@@ -190,6 +201,7 @@
   line-height: 1.29;
   letter-spacing: -0.01em;
   text-transform: uppercase;
+
 }
 
 .shopping-list-links {
