--- a/src/sass/layout/main/_shopping-list.scss
+++ b/src/sass/layout/main/_shopping-list.scss
@@ -1,8 +1,8 @@
 .container-shopping-support {
 
     display: flex;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
 }
 
@@ -50,6 +50,12 @@
   letter-spacing: -0.04em;
 
   color: $primary-text-light;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 48px;
+    line-height: 1.083;
+ 
+  }
 }
 
 .span-list {
@@ -80,6 +86,14 @@
 
     text-align: center;
     letter-spacing: -0.02em;
+
+    @media screen and (min-width: $tablet) {
+      width: 349px;
+      margin-bottom: 20px;
+      font-size: 18px;
+      line-height: 1.333;
+   
+    }
   }
 
   &__image {
@@ -88,6 +102,12 @@
 
     width: 265px;
     height: 198px;
+
+    @media screen and (min-width: $tablet) {
+      width: 322px;
+      height: 241px;
+   
+    }
   }
 }
 
@@ -239,10 +259,6 @@
 }
 
 
-  //     }
-  // }
-
-
 .card-shopping__listItem {
   mix-blend-mode: luminosity;
 }
@@ -271,15 +287,5 @@
     }
 }
 
-.tui-pagination {
-    display: flex;
-    justify-content: center;
 
-    margin-top: 20px;
-
-    @media screen and (min-width: $tablet) {
-
-        margin-top: 40px;     
-    }
-}
 
