--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,8 +1,8 @@
-html,
 body {
-  width: 100%;
-}
-body {
+  //для центрування body при відкритті модального вікна
+  left: 0;
+  right: 0;
+  //---------------------
   font-family: 'DM Sans', sans-serif;
   //   padding-left: 20px;
   //   padding-right: 20px;
